# sdl2-wallpaper

./: Cargo.toml  README.md  build.rs
interop/: get_wp_hwnd.c
src/: error.rs  lib.rs  system.rs
