[package]
name = "sdl2-wallpaper"
version = "0.1.0"
edition = "2021"
authors = ["SpencerLS"]
description = "Use SDL to actively render to the desktop background"
repository = "https://github.com/Spencer1O1/sdl2-wallpaper/"
readme = "README.md"
keywords = []
categories = []
license = "MIT OR Apache-2.0"

[build-dependencies]
cc = { git = "https://github.com/rust-lang/cc-rs.git", rev = "163eb8e" }

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["static-link", "use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2"]
git = "https://github.com/microsoft/vcpkg"
rev = "f6a5d4e"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
