[package]
name = "sdl2-wallpaper"
version = "0.1.0"
edition = "2021"
authors = ["SpencerLS"]
description = "Use SDL to actively render to the desktop background"
repository = "https://github.com/Spencer1O1/sdl2-wallpaper/"
readme = "README.md"
keywords = ["graphics", "rendering", "sdl", "windows"]
categories = ["graphics", "rendering", "os"]
license = "MIT OR Apache-2.0"

[build-dependencies]
cc = "1.0.79"

[dependencies]
sdl2 = "0.35.2"
